[package]
name = "secondopinion"
version = "0.2.0"
edition = "2021"
description = "Agent-agnostic AI pull request reviews as a GitHub Action"
license = "MIT"
repository = "https://github.com/wuisabel-gif/secondopinion"
readme = "README.md"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "=2.9.7", features = ["json"] }

[profile.release]
opt-level = 1
